# hhgeometry

./: .clang-format  CMakeLists.txt  README.md  main.cpp  test.cpp
hhgeometry/: CMakeLists.txt  hhgeometry.cpp  hhgeometry.hpp
